# nvboard

./: .gitignore  README.md  flake.nix  meson.build  meson_options.txt
example/: README.md  meson.build
example/csrc/: main.cpp
example/vsrc/: led.v  ps2_keyboard.v  seg.v  uart.v
include/: component.h  configs.h  font.h  keyboard.h  macro.h  nvboard.h  pins.h  render.h  term.h  uart.h  vga.h
src/: at_scancode.h  button.cpp  component.cpp  event.cpp  font.cpp  keyboard.cpp  led.cpp  nvboard.cpp  render.cpp  segs7.cpp  switch.cpp  term.cpp  timer.cpp  uart.cpp  vga.cpp
usr/include/: pins.h
